# hector_small_arm_common

./: README.md
hector_small_arm_bringup/: CMakeLists.txt  package.xml
hector_small_arm_bringup/launch/: minimal.launch  on_desk_test.launch
hector_small_arm_description/: CMakeLists.txt  package.xml
hector_small_arm_description/launch/: xacrodisplay.launch
hector_small_arm_description/meshes/hector_arm/: hector_arm_link_0.stl  hector_arm_link_1.stl  hector_arm_link_2.stl  hector_arm_link_3.stl  hector_arm_link_4.stl  hector_arm_link_4_v2.stl
hector_small_arm_description/urdf/: hector_arm_ax12_5dof.urdf.xacro  hector_arm_ax12_5dof_fake_6dof_standalone.urdf.xacro  hector_arm_ax12_5dof_standalone.urdf.xacro
hector_small_arm_driver/: CMakeLists.txt  hector_small_arm_common.rosinstall  mainpage.dox  package.xml
hector_small_arm_driver/config/: hector_arm_controller.yaml  hector_arm_controller.yaml~  hector_arm_controller_sim.yaml
hector_small_arm_driver/launch/: hector_arm_controller.launch  hector_arm_controller.launch~  hector_arm_controller_sim.launch  hector_arm_controller_sim.launch~
hector_small_arm_driver/scripts/: joint_states_publisher.py
hector_small_arm_driver/src/: joint_state_publisher.cpp
hector_small_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
hector_small_arm_moveit/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  obelix_ugv.srdf  ompl_planning.yaml
hector_small_arm_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  obelix_ugv_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hector_small_arm_ros_control/: CMakeLists.txt  package.xml
hector_small_arm_ros_control/config/: controller.yaml  joint_state_controller.yaml  joint_trajectory_controller.yaml
hector_small_arm_ros_control/launch/: hector_small_arm_ros_control.launch
hector_small_arm_ros_control/src/: hector_small_arm_control.cpp
(+1 files in other folders)
